Start menu bar in student store and artefacts

--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -19,26 +19,34 @@
                 </figure>
                 <a href="../TurboSnailsQuestStore/login.html"><img src="" alt="logout"></a>
             </div>
+
+
             <nav>
                 <ul>
                     <li>
-
+                        <a href="store.html"> STORE</a>
                     </li>
                     <li>
-
+                        CROWDFUNDING
                     </li>
                     <li>
-
+                        <a href="artifacts.html">ARTEFACTS</a>
                     </li>
                 </ul>
-            </nav>
+             </nav>
 
         </header>
+
+        
         <div class="main_content">
-            <h1> </h1>
+            <h1>CROWD FUNDING </h1>
             <p> </p>
 
         </div>
+
+
+
+
         <footer>
             <span id="links">
                 <ul>
