Put cards in rows

--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>QuestStore login</title>
+    <title>Crowfunding</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
@@ -37,7 +37,7 @@
 
         </header>
 
-        
+
         <div class="main_content">
             <h1>CROWD FUNDING </h1>
             <p> </p>
