--- a/student/artifacts.html
+++ b/student/artifacts.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>QuestStore login</title>
+    <title>Artefacts</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
     <link rel="stylesheet" href="css/reset.css">
+
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="stylesheet" href="../css/cards.css">
+
     <script src="js/script.js"></script>
 </head>
 
