--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>QuestStore login</title>
-    <meta name="viewport" content="width=device-width, initial-sclae=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/script.js"></script>
@@ -14,12 +14,12 @@
     <div class="page_content">
 
         <div class="login_content">
-            <form name="login_form" action="login()" id="login_form">
+            <form name="login_form" id="login_form">
                 <label for="login">Login:</label>
                 <input type="text" name="login" id="login" size="40" required>
                 <label for="password">Password:</label>
-                <input type="text" name="password" id="password" size="40" required>
-                <input type="button" value="login" id="submit_button">
+                <input type="password" name="password" id="password" size="40" required>
+                <input type="button" value="login" id="submit_button" onclick="logIn()">
             </form>
         </div>
 
