--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>QuestStore login</title>
-    <meta name="viewport" content="width=device-width, initial-sclae=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/script.js"></script>
@@ -16,23 +16,22 @@
         <div class="login_content">
             <form name="login_form" action="login()" id="login_form">
                 <label for="login">Login:</label>
-                <input type="text" name="login" id="login" size="40" required>
+                <input type="text" name="login" id="login" size="25" required>
                 <label for="password">Password:</label>
-                <input type="text" name="password" id="password" size="40" required>
+                <input type="text" name="password" id="password" size="25" required>
                 <input type="button" value="login" id="submit_button">
             </form>
         </div>
 
-        <footer>
+        <footer>            
             <span id="links">
-                <ul>
-                    <title>Find us on Facebook:</title>
+                <h3>Find us on Facebook:</h3>
+                <ul>                    
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
                 </ul>
             </span>
-
             <span id="copyrights">
                 <p>Copyrights&copy; 2018 by TurboSnails, all rights reserved.</p>
             </span>
