Fix footer facebook content

--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -49,8 +49,8 @@
 
         <footer>
             <span id="links">
-                <ul>
-                    <title>Find us on Facebook:</title>
+                <h3>Find us on Facebook:</h3>
+                <ul>                    
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
