Correct links in all html documents

--- a/creepyguy/classes.html
+++ b/creepyguy/classes.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>QuestStore login</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href=../css/main.css">
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 <figure>
                     <img src="" alt="logo">
                 </figure>
-                <a href="../TurboSnailsQuestStore/login.html"><img src="" alt="logout"></a>
+                <a href="../login.html"><img src="" alt="logout"></a>
             </div>
             <nav>
                 <ul>
