--- a/student/store.html
+++ b/student/store.html
@@ -6,11 +6,9 @@
     <title>Store</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
-    <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/cards.css">
-
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -20,7 +18,7 @@
                 <figure>
                     <img src="" alt="logo">
                 </figure>
-                <a href="../TurboSnailsQuestStore/login.html"><img src="" alt="logout"></a>
+                <a href="../login.html"><img src="" alt="logout"></a>
             </div>
             <nav>
                 <ul>
@@ -36,8 +34,6 @@
                 </ul>
             </nav>
         </header>
-
-
 
         <div class="main_content">
 
@@ -78,17 +74,8 @@
                             <div class ="card"> 3</div>
                 
                     </div>
-
                 </div>
-
-
-
         </div>
-
-
-
-
-
 
         <footer>
             <span id="links">
