--- a/student/artifacts.html
+++ b/student/artifacts.html
@@ -5,13 +5,10 @@
     <meta charset="utf-8">
     <title>Artefacts</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
-    <link rel="stylesheet" href="css/reset.css">
-
-    <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/cards.css">
-
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -22,7 +19,7 @@
                 <figure>
                     <img src="" alt="logo">
                 </figure>
-                <a href="../TurboSnailsQuestStore/login.html"><img src="" alt="logout"></a>
+                <a href="../login.html"><img src="" alt="logout"></a>
             </div>
 
             <nav>
