--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Crowfunding</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -17,9 +17,8 @@
                 <figure>
                     <img src="" alt="logo">
                 </figure>
-                <a href="../TurboSnailsQuestStore/login.html"><img src="" alt="logout"></a>
+                <a href="../login.html"><img src="" alt="logout"></a>
             </div>
-
 
             <nav>
                 <ul>
@@ -34,18 +33,13 @@
                     </li>
                 </ul>
              </nav>
-
         </header>
-
 
         <div class="main_content">
             <h1>CROWD FUNDING </h1>
             <p> </p>
 
         </div>
-
-
-
 
         <footer>
             <span id="links">
@@ -64,5 +58,4 @@
     </div>
 
 </body>
-
 </html>
