Add id for "Donate" button

--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -48,7 +48,7 @@
                 <p>Yet to collect: <p id="item_price">10 </p> cc</p>
                 <label for="fund_input">Fund:</label>
                 <input type="number" name="fund_input" id="fund_input" min="1" max="5">
-                <input type="button" value="Donate" onclick="fund()">
+                <input type="button" id="fund_button" value="Donate" onclick="fund()">
 
             </div>
 
