--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -45,10 +45,34 @@
                     <img src="" alt="item">
                     <span class="item_description">Description...</span>
                 </div>
-                <p>Yet to collect: <p id="item_price">10 </p> cc</p>
+                <p>Yet to collect: <span id="item_price1">10 </span> cc</p>
                 <label for="fund_input">Fund:</label>
-                <input type="number" name="fund_input" id="fund_input" min="1" max="5">
-                <input type="button" id="fund_button" value="Donate" onclick="fund()">
+                <input type="number" name="fund_input" id="fund_input1" min="1" max="5">
+                <input type="button" id="fund_button1" value="Donate" onclick="fund(1)">
+
+            </div>
+
+            <div class="crowdfund_item">
+                <div class="card">
+                    <img src="" alt="item">
+                    <span class="item_description">Description...</span>
+                </div>
+                <p>Yet to collect: <span id="item_price2">10 </span> cc</p>
+                <label for="fund_input">Fund:</label>
+                <input type="number" name="fund_input" id="fund_input2" min="1" max="5">
+                <input type="button" id="fund_button2" value="Donate" onclick="fund(2)">
+
+            </div>
+
+            <div class="crowdfund_item">
+                <div class="card">
+                    <img src="" alt="item">
+                    <span class="item_description">Description...</span>
+                </div>
+                <p>Yet to collect: <span id="item_price3">10 </span> cc</p>
+                <label for="fund_input">Fund:</label>
+                <input type="number" name="fund_input" id="fund_input3" min="1" max="5">
+                <input type="button" id="fund_button3" value="Donate" onclick="fund(3)">
 
             </div>
 
