--- a/student/store.html
+++ b/student/store.html
@@ -17,20 +17,20 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img src="" alt="logo">
+                    <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="" alt="logout"></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        STORE
+                        <a href="store.html">STORE</a>
                     </li>
                     <li>
                         <a href="crowdfunding.html"> CROWDFUNDING</a> 
                     </li>
                     <li>
-                        <a href="artifacts.html">ARTEFACTS</a>
+                        <a href="artifacts.html">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
