--- a/creepyguy/mentors.html
+++ b/creepyguy/mentors.html
@@ -15,7 +15,7 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img src="" alt="logo">
+                    <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="" alt="logout"></a>
             </div>
