--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -15,7 +15,7 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img src="" alt="logo">
+                    <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="" alt="logout"></a>
             </div>
@@ -23,13 +23,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="store.html"> STORE</a>
+                        <a href="store.html">STORE</a>
                     </li>
                     <li>
-                        CROWDFUNDING
+                        <a href="crowdfunding.html">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="artifacts.html">ARTEFACTS</a>
+                        <a href="artifacts.html">ARTIFACTS</a>
                     </li>
                 </ul>
              </nav>
