--- a/creepyguy/mentors.html
+++ b/creepyguy/mentors.html
@@ -17,7 +17,7 @@
                 <figure>
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
-                <a href="../login.html"><img src="" alt="logout"></a>
+                <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
             </div>
             <nav>
                 <ul>
