--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -19,6 +19,7 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a href="wallet.html"><img src="../img/wallet.png" alt="wallet"></a>
             </div>
 
             <nav>
