--- a/student/quests.html
+++ b/student/quests.html
@@ -18,6 +18,7 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a href="wallet.html"><img src="../img/wallet.png" alt="wallet"></a>
             </div>
             <nav>
                 <ul>
@@ -42,7 +43,7 @@
         <footer>
             <span id="links">
                 <h3>Find us on Facebook:</h3>
-                <ul>                    
+                <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
