--- a/student/wallet.html
+++ b/student/wallet.html
@@ -18,17 +18,19 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a href="wallet.html"><img src="../img/wallet.png" alt="wallet"></a>
             </div>
+
             <nav>
                 <ul>
                     <li>
-
+                        <a href="store.html">STORE</a>
                     </li>
                     <li>
-
+                        <a href="crowdfunding.html">CROWDFUNDING</a>
                     </li>
                     <li>
-
+                        <a href="artifacts.html">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
@@ -42,7 +44,7 @@
         <footer>
             <span id="links">
                 <h3>Find us on Facebook:</h3>
-                <ul>                    
+                <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
