--- a/student/artifacts.html
+++ b/student/artifacts.html
@@ -19,7 +19,7 @@
                 <figure>
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
-                <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a href="../login.html"><img id="logout" src="../img/logout.png" alt="logout"></a>
             </div>
 
             <nav>
