--- a/student/wallet.html
+++ b/student/wallet.html
@@ -18,7 +18,12 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
-                <a href="wallet.html"><img src="../img/wallet.png" alt="wallet"></a>
+                <a href="wallet.html">
+                    <figure id="wallet_icon">
+                        <img src="../img/wallet.png" id="wallet_img" alt="wallet">
+                        <div id="amount_of_coolcoins">100</div>
+                    </figure>
+                </a>
             </div>
 
             <nav>
