Create mentor artefacts and quest

--- a/mentor/codecoolers.html
+++ b/mentor/codecoolers.html
@@ -19,16 +19,17 @@
                 </figure>
                 <a href="../login.html"><img src="" alt="logout"></a>
             </div>
+
             <nav>
                 <ul>
                     <li>
-
+                            <a href="codecoolers.html">CODECOOLERS</a>
                     </li>
                     <li>
-
+                            <a href="quests.html">QUEST</a> 
                     </li>
                     <li>
-
+                            <a href="artifacts.html">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
