Add card to crowdfunding item

--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -48,8 +48,15 @@
 
             <div class="crowdfund_item">
                 <div class="card">
-                    <img src="" alt="item">
-                    <span class="item_description">Description...</span>
+
+                    <span class="text_on_card_1">Exploring a dungeon</span>
+                    <div>
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                    </div>
+                    <ul>
+                        <li><span class="text_on_card_2">Finishing a Teamwork week</span></li>
+                        <li><span class="text_on_card_2">100 cc/ person</span></li>
+                    </ul>
                 </div>
                 <p>Yet to collect: <span id="item_price1">10 </span> cc</p>
                 <label for="fund_input">Fund:</label>
@@ -60,8 +67,15 @@
 
             <div class="crowdfund_item">
                 <div class="card">
-                    <img src="" alt="item">
-                    <span class="item_description">Description...</span>
+
+                    <span class="text_on_card_1">Exploring a dungeon</span>
+                    <div>
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                    </div>
+                    <ul>
+                        <li><span class="text_on_card_2">Finishing a Teamwork week</span></li>
+                        <li><span class="text_on_card_2">100 cc/ person</span></li>
+                    </ul>
                 </div>
                 <p>Yet to collect: <span id="item_price2">10 </span> cc</p>
                 <label for="fund_input">Fund:</label>
@@ -72,8 +86,14 @@
 
             <div class="crowdfund_item">
                 <div class="card">
-                    <img src="" alt="item">
-                    <span class="item_description">Description...</span>
+                    <span class="text_on_card_1">Exploring a dungeon</span>
+                    <div>
+                        <img class="pictures_on_card" src="../resources/img/heroes.jpg" alt="No image!!!" />
+                    </div>
+                    <ul>
+                        <li><span class="text_on_card_2">Finishing a Teamwork week</span></li>
+                        <li><span class="text_on_card_2">100 cc/ person</span></li>
+                    </ul>
                 </div>
                 <p>Yet to collect: <span id="item_price3">10 </span> cc</p>
                 <label for="fund_input">Fund:</label>
