Implement difrent border between cards

--- a/student/artifacts.html
+++ b/student/artifacts.html
@@ -121,7 +121,7 @@
                         </div>
     
                         <div class="card">
-                            <span class="text_on_card_1">Summon Code Elemental</span>
+                            <span class="text_on_card_1">Code Elemental</span>
                             <div >
                                 <img 
                                     class="pictures_on_card" 
