Change wallet link

--- a/student/inventory.html
+++ b/student/inventory.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>QuestStore login</title>
-    <meta name="viewport" content="width=device-width, initial-sclae=1">
+    <title>Crowfunding</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <script src="../js/script.js"></script>
 </head>
 
@@ -27,26 +28,27 @@
 
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
             </div>
+
             <nav>
                 <ul>
                     <li>
-
+                        <a href="store.html">STORE</a>
                     </li>
                     <li>
-
+                        <a href="crowdfunding.html">CROWDFUNDING</a>
                     </li>
                     <li>
-
+                        <a href="artifacts.html">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
-
         </header>
+
         <div class="main_content">
-            <h1> </h1>
-            <p> </p>
+            <h1>Inventory</h1>
 
         </div>
+
         <footer>
             <span id="links">
                 <h3>Find us on Facebook:</h3>
