--- a/student/wallet.html
+++ b/student/wallet.html
@@ -17,12 +17,14 @@
                 <figure>
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
-                <a href="wallet.html">
-                    <figure id="wallet_icon">
-                        <img src="../img/wallet.png" title="wallet" id="wallet_img" alt="wallet">
+
+                <figure id="wallet_icon">
+                    <a href="wallet.html">
+                        <img src="../img/wallet.png" id="wallet_img" alt="wallet">
                         <div id="amount_of_coolcoins">100</div>
-                    </figure>
-                </a>
+                    </a>
+                </figure>
+
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
             </div>
 
