--- a/student/quests.html
+++ b/student/quests.html
@@ -18,6 +18,12 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
 
+                <figure id="backpack_icon">
+                    <a href="inventory.html">
+                        <img src="../img/backpack.png" id="backpack_img" alt="backpack">
+                    </a>
+                </figure>
+
                 <figure id="wallet_icon">
                     <a href="wallet.html">
                         <img src="../img/wallet.png" id="wallet_img" alt="wallet">
@@ -27,6 +33,7 @@
 
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
             </div>
+
             <nav>
                 <ul>
                     <li>
