--- a/student/store.html
+++ b/student/store.html
@@ -20,14 +20,22 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
 
+                <figure id="backpack_icon">
+                    <a href="inventory.html">
+                        <img src="../img/backpack.png" id="backpack_img" alt="backpack">
+                    </a>
+                </figure>
+
                 <figure id="wallet_icon">
                     <a href="wallet.html">
                         <img src="../img/wallet.png" id="wallet_img" alt="wallet">
                         <div id="amount_of_coolcoins">100</div>
                     </a>
                 </figure>
+
                 <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
             </div>
+
             <nav>
                 <ul>
                     <li>
