Add mentors list and opoup window for adding/editing mentor

--- a/creepyguy/levels.html
+++ b/creepyguy/levels.html
@@ -22,13 +22,13 @@
             <nav>
                 <ul>
                     <li>
-
+                        <a href="mentors.html">MENTORS</a>
                     </li>
                     <li>
-
+                        <a href="classes.html">CLASSES</a>
                     </li>
                     <li>
-
+                        <a href="levels.html">LEVELS</a>
                     </li>
                 </ul>
             </nav>
