--- a/creepyguy/classes.html
+++ b/creepyguy/classes.html
@@ -6,7 +6,7 @@
     <title>QuestStore login</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href=../css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="../js/script.js"></script>
 </head>
 
@@ -22,13 +22,13 @@
             <nav>
                 <ul>
                     <li>
-
+                        <a href="mentors.html">MENTORS</a>
                     </li>
                     <li>
-
+                        <a href="classes.html">CLASSES</a>
                     </li>
                     <li>
-
+                        <a href="levels.html">LEVELS</a>
                     </li>
                 </ul>
             </nav>
