Implement adding new mentor to mentor list

--- a/creepyguy/mentors.html
+++ b/creepyguy/mentors.html
@@ -64,7 +64,7 @@
                     <input class="edit_button" type="button" name="edit_mentor" value="EDIT">
                 </li>
             </ul>
-            <input id="add_mentor" type="button" name="add_mentor" value="ADD MENTOR">
+            <input type="button" id="add_mentor_option" name="add_mentor_option" value="ADD MENTOR">
 
         </div>
         <footer>
@@ -85,7 +85,7 @@
             <form name="edit_mentor_form" id="edit_mentor_form">
                 <label for="name">Name:</label>
                 <br>
-                <input type="text" name="name" id="name" size="50"
+                <input type="text" name="edit_mentor_name" id="edit_mentor_name" size="50"
                     placeholder="Mentor name">
                 <br>
                 <label for="edit_mentor_class">Class:</label>
@@ -95,10 +95,11 @@
                 <br>
                 <label for="edit_mentor_email">E-mail:</label>
                 <br>
-                <input type="text" name="edit_mentor_email" id="messageedit_mentor_email" size="50"
+                <input type="text" name="edit_mentor_email" id="edit_mentor_email" size="50"
                     placeholder="Mentor email">
                 <br>
                 <input type="button" id="save_mentor_button" value="SAVE">
+                <input type="button" id="add_mentor_button" value="ADD">
                 <br>
                 <input type="button" id="exit_mentor_button" value="EXIT">
             </form>
