--- a/student/inventory.html
+++ b/student/inventory.html
@@ -19,20 +19,40 @@
                     <img id="logo" src="../img/logo.png" alt="logo">
                 </figure>
 
-                <figure id="backpack_icon">
-                    <a href="inventory.html">
-                        <img src="../img/backpack.png" id="backpack_img" alt="backpack">
-                    </a>
-                </figure>
+                <span id="header_icons">
+                    <div class="header_icon">
+                        <figure id="icon">
+                            <a href="inventory.html">
+                                <img src="../img/backpack.png" class="icon_img" alt="backpack">
+                            </a>
+                        </figure>
+                    </div>
 
-                <figure id="wallet_icon">
-                    <a href="wallet.html">
-                        <img src="../img/wallet.png" id="wallet_img" alt="wallet">
-                        <div id="amount_of_coolcoins">100</div>
-                    </a>
-                </figure>
+                    <div class="header_icon">
+                        <figure id="icon">
+                            <a href="wallet.html">
+                                <img src="../img/wallet.png" class="icon_img" alt="wallet">
+                                <div id="amount_of_coolcoins">100</div>
+                            </a>
+                        </figure>
+                    </div>
 
-                <a href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                    <div class="header_icon">
+                        <figure id="icon">
+                            <img src="../img/star-icon.png" class="icon_img" alt="exp_icon">
+                            <div id="exp_level">5</div>
+                        </figure>
+                    </div>
+
+                    <div class="header_icon">
+                        <figure id="icon">
+                            <a href="../login.html"><img src="../img/logout.png" class="icon_img" alt="logout"></a>
+                        </figure>
+
+                    </div>
+
+
+                </span>
             </div>
 
             <nav>
