Add navigation links

--- a/creepyguy/classes.html
+++ b/creepyguy/classes.html
@@ -6,8 +6,9 @@
     <title>QuestStore login</title>
     <meta name="viewport" content="width=device-width, initial-sclae=1">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href=../css/main.css">
-    <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/script.js">
+    </script>
 </head>
 
 <body>
@@ -22,13 +23,13 @@
             <nav>
                 <ul>
                     <li>
-
+                        <a href="../creepyguy/classes.html">CLASSES MANAGMENT</a>
                     </li>
                     <li>
-
+                        <a href="../creepyguy/mentors.html">MENTORS MANAGMENT</a>
                     </li>
                     <li>
-
+                        <a href="../creepyguy/levels.html">LEVELS MANAGMENT</a>
                     </li>
                 </ul>
             </nav>
@@ -42,7 +43,7 @@
         <footer>
             <span id="links">
                 <h3>Find us on Facebook:</h3>
-                <ul>                    
+                <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
