--- a/creepyguy/levels.html
+++ b/creepyguy/levels.html
@@ -22,27 +22,44 @@
             <nav>
                 <ul>
                     <li>
-
+                        <a href="../creepyguy/classes.html">CLASSES MANAGMENT</a>
                     </li>
                     <li>
-
+                        <a href="../creepyguy/mentors.html">MENTORS MANAGMENT</a>
                     </li>
                     <li>
-
+                        <a href="../creepyguy/levels.html">LEVELS MANAGMENT</a>
                     </li>
                 </ul>
             </nav>
 
         </header>
+
         <div class="main_content">
-            <h1> </h1>
-            <p> </p>
+            <h1>Experience levels</h1>
+            <p>Determine how many coolcoins a student have to gain, to reach new level.</p>
+
+            <div>
+                <p>LEVEL 1: <span id="lvl1_min">0</span>
+                    - <input type="number" name="lvl1_upper_limit" id="lvl1_limit" onchange="determineNextLvlMin(1); determineThisLvlUpperLimitMinimum(1)">cc</p>
+                <p>LEVEL 2: <span id="lvl2_min"></span>
+                    - <input type="number" name="lvl2_upper_limit" id="lvl2_limit" onchange="determineNextLvlMin(2); determineThisLvlUpperLimitMinimum(2)">cc</p>
+                <p>LEVEL 3: <span id="lvl3_min"></span>
+                    - <input type="number" name="lvl3_upper_limit" id="lvl3_limit" onchange="determineNextLvlMin(3); determineThisLvlUpperLimitMinimum(3)">cc</p>
+                <p>LEVEL 4: <span id="lvl4_min"></span>
+                    - <input type="number" name="lvl4_upper_limit" id="lvl4_limit" onchange="determineNextLvlMin(4); determineThisLvlUpperLimitMinimum(4)">cc</p>
+                <p>LEVEL 5: more than <span id="lvl5_min">0</span>cc</p>
+
+                <input type="button" value="Save">
+
+            </div>
 
         </div>
+
         <footer>
             <span id="links">
                 <h3>Find us on Facebook:</h3>
-                <ul>                    
+                <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
