Do bying button and sign of cc on cards

--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -36,7 +36,7 @@
                         <a href="crowdfunding.html">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="artifacts.html">QUESTS</a>
                     </li>
                 </ul>
             </nav>
