--- a/creepyguy/levels.html
+++ b/creepyguy/levels.html
@@ -22,13 +22,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="../creepyguy/classes.html">CLASSES MANAGMENT</a>
+                        <a href="../creepyguy/classes.html">CLASSES MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="../creepyguy/mentors.html">MENTORS MANAGMENT</a>
+                        <a href="../creepyguy/mentors.html">MENTORS MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="../creepyguy/levels.html">LEVELS MANAGMENT</a>
+                        <a href="../creepyguy/levels.html">LEVELS MANAGEMENT</a>
                     </li>
                 </ul>
             </nav>
