Add magic description on card for student

--- a/student/artifacts.html
+++ b/student/artifacts.html
@@ -123,6 +123,7 @@
                                     <li><p class="text_on_card_2">Spot a major mistake in the assignment</p></li>
                                     <li><p class="text_on_card_2">50 cc</p></li>
                                 </ul>
+                                <p class="extra">EXTRA QUEST</p>
                             </div>
     
                             <div class="card">
@@ -138,6 +139,7 @@
                                     <li><p class="text_on_card_2">Doing a demo about a pet project</p></li>
                                     <li><p class="text_on_card_2">100 cc/ person</p></li>
                                 </ul>
+                                <p class="extra">EXTRA QUEST</p>
                             </div>
     
                             <div class ="card_from_mentor">
@@ -153,6 +155,7 @@
                                     <li><p class="text_on_card_2">100 cc/ person</p></li>
                                 </ul>
                                 <div  class="valuecoins">100</div>
+                                <p class="extra">EXTRA QUEST</p>
                             </div>
                     </div>
                 </div>
@@ -172,6 +175,7 @@
                             <li><p class="text_on_card_2">Spot a major mistake in the assignment</p></li>
                             <li><p class="text_on_card_2">50 cc</p></li>
                         </ul>
+                        <p class="extra">EXTRA QUEST</p>
                     </div>
 
                     <div class="card">
@@ -184,6 +188,7 @@
                             <li><p class="text_on_card_2">Doing a demo about a pet project</p></li>
                             <li><p class="text_on_card_2">100 cc/ person</p></li>
                         </ul>
+                        <p class="extra">EXTRA QUEST</p>
                     </div>
 
                     <div class="card">
@@ -195,6 +200,7 @@
                             <li><p class="text_on_card_2">Taking part in the student screening process </p></li>
                             <li><p class="text_on_card_2">100 cc/ person</p></li>
                         </ul>
+                        <p class="extra">EXTRA QUEST</p>
                     </div>
                 </div>
 
@@ -212,6 +218,7 @@
                             <li><p class="text_on_card_2">Organizing a workshop for other students</p></li>
                             <li><p class="text_on_card_2">400 cc</p></li>
                         </ul>
+                        <p class="extra">EXTRA QUEST</p>
                     </div>
 
                     <div class="card">
@@ -224,6 +231,7 @@
                             <li><p class="text_on_card_2">Attend 1 months without being late</p></li>
                             <li><p class="text_on_card_2">300 cc</p></li>
                         </ul>
+                        <p class="extra">EXTRA QUEST</p>
                     </div>
 
                     <div class="card">
@@ -235,6 +243,7 @@
                             <li><p class="text_on_card_2">deliver 4 consecutive SI week assignments on time </p></li>
                             <li><p class="text_on_card_2">500 cc</p></li>
                         </ul>
+                        <p class="extra">EXTRA QUEST</p>
                     </div>
                 </div>
 
@@ -322,13 +331,7 @@
                     </div>
                 </div>
 
-                <div class="row_card">
-
-                    <div class="card"> 1</div>
-                    <div class="card"> 2</div>
-                    <div class="card"> 3</div>
-
-                </div>
+ 
 
 
             </div>
