Split js file to smaller files, each for proper subpage

--- a/creepyguy/levels.html
+++ b/creepyguy/levels.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="../js/script.js"></script>
+    <script src="../js/levels.js"></script>
 </head>
 
 <body>
