--- a/student/crowdfunding.html
+++ b/student/crowdfunding.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/cards.css">
     <script src="../js/script.js"></script>
+    <script src="../js/crowdfunding.js"></script>
 </head>
 
 <body>
