--- a/student/wallet.html
+++ b/student/wallet.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="../js/script.js"></script>
+    <script src="../js/wallet.js"></script>
 </head>
 
 <body onload="getCCAmount()">
