Add edit option for mentor list

--- a/creepyguy/mentors.html
+++ b/creepyguy/mentors.html
@@ -38,30 +38,41 @@
         <div class="main_content">
             <h1>MENTORS</h1>
             <p>Here you can see the list of all Mentors, add new Mentor or edit existing one.</p>
+            <hr>
             <ul id="mentors">
                 <li id="list_header">
+                    <span class="mentor_id_label">ID</span>
                     <span class="mentor_name_label">NAME</span>
                     <span class="mentor_class_label">CLASS</span>
                     <span class="mentor_e_mail_label">E-MAIL</span>
-                    <span class="edit_label"></span>
                 </li>
                 <li>
+                    <span class="mentor_id"></span>
                     <span class="mentor_name">Piotr Tomaszewski</span>
                     <span class="mentor_class">Web</span>
                     <span class="mentor_e_mail">piotr@codecool.pl</span>                    
                 </li>
                 <li>
+                    <span class="mentor_id"></span>
                     <span class="mentor_name">Agnieszka Koszany</span>
                     <span class="mentor_class">Java</span>
                     <span class="mentor_e_mail">agnieszka@codecool.pl</span>                    
                 </li>
                 <li>
+                    <span class="mentor_id"></span>
                     <span class="mentor_name">Marek Grzybek</span>
                     <span class="mentor_class">Basics</span>
                     <span class="mentor_e_mail">marek@codecool.pl</span>                    
                 </li>
             </ul>
             <input type="button" id="add_mentor_option" name="add_mentor_option" value="ADD MENTOR">
+            <hr>
+            <p>Enter mentor number to edit: </p>
+            <input type="text" id="mentor_number" name="mentor_number" size="1">
+            <input type="button" id="edit_mentor_option" name="edit_mentor_option" 
+                   value="EDIT MENTOR">
+
+
 
         </div>
         <footer>
