--- a/mentor/quests.html
+++ b/mentor/quests.html
@@ -354,14 +354,14 @@
 
 
         <footer>
-            <p id="links">
+            <span id="links">
                 <h3>Find us on Facebook:</h3>
                 <ul>                    
                     <li><a href="https://www.facebook.com/profile.php?id=100024050271937" target="_blank">TurboKrzyś</a></li>
                     <li><a href="https://www.facebook.com/roman.bulinski" target="_blank">TurboRoman</a></li>
                     <li><a href="https://www.facebook.com/dar.domanski" target="_blank">TurboDaro</a></li>
                 </ul>
-            </p>
+            </span>
 
             <p id="copyrights">
                 <p>Copyrights&copy; 2018 by TurboSnails, all rights reserved.</p>
