Do edition of cards

--- a/mentor/artifacts.html
+++ b/mentor/artifacts.html
@@ -86,7 +86,7 @@
                             <p class="text_on_card_1"><input type="text" placeholder="Value..."></p>
                         </div>
 
-                    <button id="button_create_quest_card" type="button"><p class="text_on_card_1">Create artefact</p></button>
+                    <button id="button_create_quest_card" type="button"><p class="text_on_button">Create artifact</p></button>
 
                 </div>
 
