Change headers/menu font

--- a/creepyguy/mentors.html
+++ b/creepyguy/mentors.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>QuestStore login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/mentors.css">
-    <script src="../js/script.js"></script>    
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -52,27 +52,26 @@
                     <span class="mentor_id"></span>
                     <span class="mentor_name">Piotr Tomaszewski</span>
                     <span class="mentor_class">Web</span>
-                    <span class="mentor_e_mail">piotr@codecool.pl</span>                    
+                    <span class="mentor_e_mail">piotr@codecool.pl</span>
                 </li>
                 <li>
                     <span class="mentor_id"></span>
                     <span class="mentor_name">Agnieszka Koszany</span>
                     <span class="mentor_class">Java</span>
-                    <span class="mentor_e_mail">agnieszka@codecool.pl</span>                    
+                    <span class="mentor_e_mail">agnieszka@codecool.pl</span>
                 </li>
                 <li>
                     <span class="mentor_id"></span>
                     <span class="mentor_name">Marek Grzybek</span>
                     <span class="mentor_class">Basics</span>
-                    <span class="mentor_e_mail">marek@codecool.pl</span>                    
+                    <span class="mentor_e_mail">marek@codecool.pl</span>
                 </li>
             </ul>
             <input type="button" id="add_mentor_option" name="add_mentor_option" value="ADD MENTOR">
             <hr>
             <p>Enter mentor number to edit: </p>
             <input type="text" id="mentor_number" name="mentor_number" size="1">
-            <input type="button" id="edit_mentor_option" name="edit_mentor_option" 
-                   value="EDIT MENTOR">
+            <input type="button" id="edit_mentor_option" name="edit_mentor_option" value="EDIT MENTOR">
 
 
 
@@ -95,18 +94,15 @@
             <form name="edit_mentor_form" id="edit_mentor_form">
                 <label for="name">Name:</label>
                 <br>
-                <input type="text" name="edit_mentor_name" id="edit_mentor_name" size="50"
-                    placeholder="Mentor name">
+                <input type="text" name="edit_mentor_name" id="edit_mentor_name" size="50" placeholder="Mentor name">
                 <br>
                 <label for="edit_mentor_class">Class:</label>
                 <br>
-                <input type="text" name="edit_mentor_class" id="edit_mentor_class" size="50" 
-                    placeholder="Mentor class">
+                <input type="text" name="edit_mentor_class" id="edit_mentor_class" size="50" placeholder="Mentor class">
                 <br>
                 <label for="edit_mentor_email">E-mail:</label>
                 <br>
-                <input type="text" name="edit_mentor_email" id="edit_mentor_email" size="50"
-                    placeholder="Mentor email">
+                <input type="text" name="edit_mentor_email" id="edit_mentor_email" size="50" placeholder="Mentor email">
                 <br>
                 <input type="button" id="save_mentor_button" value="SAVE">
                 <input type="button" id="add_mentor_button" value="ADD">
