Do creater card in JS

--- a/student/store.html
+++ b/student/store.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/cards.css">
     <script src="../js/script.js"></script>
+    <script src="../js/cards.js"></script>
 </head>
 
 <body>
@@ -52,6 +53,7 @@
 
         </header>
 
+
         <div class="main_content">
 
             <h1>STORE</h1>
@@ -75,7 +77,8 @@
                             <li><p class="text_on_card_2">Private mentoring</p></li>
                             <li><p class="text_on_card_2">50 cc</p></li>
                         </ul>
-                        <div  class="buybutton">BUY!</div>
+                        <button  class="buybutton" onclick="buy()">BUY!</button>
+
                     </div>
 
                     <div class="card_artefacts">
@@ -92,7 +95,7 @@
                             <li><p class="text_on_card_2">You can spend a day in home office</p></li>
                             <li><p class="text_on_card_2">300 cc</p></li>
                         </ul>
-                        <div  class="buybutton" >BUY!</div>
+                        <button  class="buybutton" onclick="buy()">BUY!</button>
                     </div>
 
                     <div class ="card_artefacts">
@@ -107,7 +110,7 @@
                             <li><p class="text_on_card_2">xtend SI week assignment deadline by one da</p></li>
                             <li><p class="text_on_card_2">500 cc</p></li>
                         </ul>
-                        <div  class="buybutton">BUY!</div>
+                        <button  class="buybutton" onclick="buy()">BUY!</button>
                     </div>
 
                 </div>
