--- a/mentor/quests.html
+++ b/mentor/quests.html
@@ -148,7 +148,10 @@
                     <!-- empty card   -->
                     <div class="row_card">
 
-                        <div class="card_empty" id="empty_card_1">
+                            <div id="new_card" >
+                            </div>
+
+                        <!-- <div class="card_empty" id="empty_card_1">
                             <p class="text_on_card_1" id="empty_card_title"></p>
                             <div>
                                 <img id="no_img" class="pictures_on_card" src="" alt="Picture of  heroes!!" />
@@ -162,7 +165,7 @@
                                 </li>
                             </ul>
 
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- Extra - quest     -->
